fixing position: z-index

--- a/styles.css
+++ b/styles.css
@@ -15,24 +15,26 @@ body {
 }
 
 body {
-  display: grid;
-  /* align-items: center; */
-  place-items: center;
+  display: flex;
+  justify-content: center;
+ 
   background: url(images/NLW-Heat-Mission_Origin-DoWhile2021-Community.png) no-repeat center/cover ;
+  /* position: absolute; */
   
 }
 
 main{
+  
   display: flex;
   background: url(images/1background-card-desktop.png);
   width: 358px;
   height: 540px;
-  margin-top:-150px;
+  margin-top:145px;
   /* border: 1px solid; */
   background-color:#29292E;
 
   color:var(--gray);
-  position:relative;
+  /* position:relative; */
   justify-content: center;
   border-radius:1%;
 }
@@ -43,19 +45,24 @@ main{
   height:158px;
   /* border:1px solid; */
   position: absolute;
-  margin-top:-145px;
-  background: url(images/faixa.jpg);
+  /* margin-top:-145px; */
+  /* background: url(images/faixa.jpg); */
   justify-content: center;
-  position:absolute;
+ 
   margin-bottom: 10px;
+  margin-top:0px;
   z-index: 1;
   
 }
 
 .quebra{
-  margin-top:150px;
-  position:relative;
-  z-index: -1;
+  margin-top:147px;
+  /* position:relative; */
+  /* z-index: 1; */
+  position: absolute;
+  /* top:0px; */
+  /* right:0px; */
+  /* border: 1px solid red; */
 }
 
 
